--- a/post.html
+++ b/post.html
@@ -8,7 +8,7 @@
     <div class="body">
       <div class="header">
         <div class="title">
-          <a href="index.html">Robbie&#39;s Garbage, Collected.</a>
+          <a href="/">Robbie&#39;s Garbage, Collected.</a>
         </div>
       </div>
       <div class="blog">
