--- a/index.html
+++ b/index.html
@@ -12,49 +12,49 @@
           <a href="">Robbie&#39;s Garbage, Collected.</a>
         </div>
       </div>
-      <div class="home"><h2><a href="2010/09/27/save-your-browser-session-from-cmd-q/index.html">Saving Your Browser Session From &#8984;Q</a></h2>
+      <div class="home"><h2><a href="2010/09/27/save-your-browser-session-from-cmd-q">Saving Your Browser Session From &#8984;Q</a></h2>
 <div class="date">September 27, 2010</div>
-<h2><a href="2008/08/23/lazy-loading-for-mere-mortals/index.html">Lazy Loading For Mere Mortals</a></h2>
+<h2><a href="2008/08/23/lazy-loading-for-mere-mortals">Lazy Loading For Mere Mortals</a></h2>
 <div class="date">August 23, 2008</div>
-<h2><a href="2008/07/21/guices-toprovider-sometimes-considered-harmful/index.html">Guice&apos;s toProvider Sometimes Considered Harmful</a></h2>
+<h2><a href="2008/07/21/guices-toprovider-sometimes-considered-harmful">Guice&apos;s toProvider Sometimes Considered Harmful</a></h2>
 <div class="date">July 21, 2008</div>
-<h2><a href="2008/05/08/guice-productivity/index.html">Guice Productivity</a></h2>
+<h2><a href="2008/05/08/guice-productivity">Guice Productivity</a></h2>
 <div class="date">May 8, 2008</div>
-<h2><a href="2008/04/06/dollarmaps/index.html">DollarMaps: Easy Map Creation for Java</a></h2>
+<h2><a href="2008/04/06/dollarmaps">DollarMaps: Easy Map Creation for Java</a></h2>
 <div class="date">April 6, 2008</div>
-<h2><a href="2008/03/28/guice-book-released/index.html">Guice Book Released!</a></h2>
+<h2><a href="2008/03/28/guice-book-released">Guice Book Released!</a></h2>
 <div class="date">March 28, 2008</div>
-<h2><a href="2008/03/15/guice-spring-25-and-finding-mistakes-early/index.html">Guice, Spring 2.5 and Finding Mistakes Early</a></h2>
+<h2><a href="2008/03/15/guice-spring-25-and-finding-mistakes-early">Guice, Spring 2.5 and Finding Mistakes Early</a></h2>
 <div class="date">March 15, 2008</div>
-<h2><a href="2008/02/05/the-last-lecture/index.html">The Last Lecture</a></h2>
+<h2><a href="2008/02/05/the-last-lecture">The Last Lecture</a></h2>
 <div class="date">February 5, 2008</div>
-<h2><a href="2007/12/13/a-goldfishs-memory-of-javapolis-2007/index.html">A Goldfish&apos;s Memory of Javapolis 2007</a></h2>
+<h2><a href="2007/12/13/a-goldfishs-memory-of-javapolis-2007">A Goldfish&apos;s Memory of Javapolis 2007</a></h2>
 <div class="date">December 13, 2007</div>
-<h2><a href="2007/12/12/guice-book/index.html">Guice Book</a></h2>
+<h2><a href="2007/12/12/guice-book">Guice Book</a></h2>
 <div class="date">December 12, 2007</div>
-<h2><a href="2007/12/08/guice-debug-output/index.html">Guice Debug Output</a></h2>
+<h2><a href="2007/12/08/guice-debug-output">Guice Debug Output</a></h2>
 <div class="date">December 8, 2007</div>
-<h2><a href="2007/11/23/communicating-technology/index.html">Communicating Technology</a></h2>
+<h2><a href="2007/11/23/communicating-technology">Communicating Technology</a></h2>
 <div class="date">November 23, 2007</div>
-<h2><a href="2007/08/26/stay-hungry-stay-foolish/index.html">Stay Hungry, Stay Foolish</a></h2>
+<h2><a href="2007/08/26/stay-hungry-stay-foolish">Stay Hungry, Stay Foolish</a></h2>
 <div class="date">August 26, 2007</div>
-<h2><a href="2007/07/12/builder-pattern-deluxe/index.html">Builder Pattern Deluxe</a></h2>
+<h2><a href="2007/07/12/builder-pattern-deluxe">Builder Pattern Deluxe</a></h2>
 <div class="date">July 12, 2007</div>
-<h2><a href="2007/07/07/my-4-hour-workweek/index.html">My 4 Hour Workweek</a></h2>
+<h2><a href="2007/07/07/my-4-hour-workweek">My 4 Hour Workweek</a></h2>
 <div class="date">July 7, 2007</div>
-<h2><a href="2007/06/07/guice-thread-scope/index.html">Guice Thread Scope</a></h2>
+<h2><a href="2007/06/07/guice-thread-scope">Guice Thread Scope</a></h2>
 <div class="date">June 7, 2007</div>
-<h2><a href="2007/05/21/consumer-jre-explained-and-confirmed/index.html">Consumer JRE Explained (and Confirmed)</a></h2>
+<h2><a href="2007/05/21/consumer-jre-explained-and-confirmed">Consumer JRE Explained (and Confirmed)</a></h2>
 <div class="date">May 21, 2007</div>
-<h2><a href="2007/05/11/javafx-in-the-browser-what-they-missed/index.html">JavaFX in the Browser: What They Missed</a></h2>
+<h2><a href="2007/05/11/javafx-in-the-browser-what-they-missed">JavaFX in the Browser: What They Missed</a></h2>
 <div class="date">May 11, 2007</div>
-<h2><a href="2007/05/09/javafx-the-return-of-the-bling/index.html">JavaFX: The Return of the Bling</a></h2>
+<h2><a href="2007/05/09/javafx-the-return-of-the-bling">JavaFX: The Return of the Bling</a></h2>
 <div class="date">May 9, 2007</div>
-<h2><a href="2007/05/08/press-f3-to-continue-initial-thoughts-on-the-javafx-ria-platform/index.html">Press F3 to continue: initial thoughts on the JavaFX RIA platform</a></h2>
+<h2><a href="2007/05/08/press-f3-to-continue-initial-thoughts-on-the-javafx-ria-platform">Press F3 to continue: initial thoughts on the JavaFX RIA platform</a></h2>
 <div class="date">May 8, 2007</div>
-<h2><a href="2007/05/06/scripting-guice/index.html">Scripting Guice</a></h2>
+<h2><a href="2007/05/06/scripting-guice">Scripting Guice</a></h2>
 <div class="date">May 6, 2007</div>
-<h2><a href="2007/05/04/silverlight-an-offer-you-cant-refuse/index.html">Silverlight: an offer you can&apos;t refuse</a></h2>
+<h2><a href="2007/05/04/silverlight-an-offer-you-cant-refuse">Silverlight: an offer you can&apos;t refuse</a></h2>
 <div class="date">May 4, 2007</div>
 </div>
     </div>
