correct capitalization in WordPress

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <a href="">Robbie&#39;s Garbage, Collected.</a>
         </div>
       </div>
-      <div class="home"><h2><a href="2013/02/27/wordpress-to-github-pages">Migrating URLs from Wordpress to GitHub Pages</a></h2>
+      <div class="home"><h2><a href="2013/02/27/wordpress-to-github-pages">Migrating URLs from WordPress to GitHub Pages</a></h2>
 <div class="date">February 27, 2013</div>
 <h2><a href="2010/09/27/save-your-browser-session-from-cmd-q/">Saving Your Browser Session From &#8984;Q</a></h2>
 <div class="date">September 27, 2010</div>
