--- a/blog_entries/stay-hungry-stay-foolish.html
+++ b/blog_entries/stay-hungry-stay-foolish.html
@@ -1,3 +1,3 @@
 Stay Hungry, Stay Foolish
 August 26, 2007
- [dailymotion id=3Q64GVHgAFlvja3wG]<br/><br/>This is an awesome speech Steve Jobs gave in 2005 at Stanford University. Truly inspirational stuff.<br/><br/>YouTube version <a target="_blank" href="http://youtube.com/watch?v=D1R-jKKp3NA">here</a>.
+<iframe width="420" height="315" src="http://www.youtube-nocookie.com/embed/UF8uR6Z6KLc" frameborder="0" allowfullscreen></iframe> <br/><br/>This is an awesome speech Steve Jobs gave in 2005 at Stanford University. Truly inspirational stuff.
