blog entry: logging still sucks

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
           <a href="">Robbie&#39;s Garbage, Collected.</a>
         </div>
       </div>
-      <div class="home"><h2><a href="2013/03/01/defining-quality/">Defining Quality</a></h2>
+      <div class="home"><h2><a href="2013/03/07/logging-still-sucks/">Logging Still Sucks</a></h2>
+<div class="date">March 7, 2013</div>
+<h2><a href="2013/03/01/defining-quality/">Defining Quality</a></h2>
 <div class="date">March 1, 2013</div>
 <h2><a href="2013/02/27/wordpress-to-github-pages/">Migrating URLs from WordPress to GitHub Pages</a></h2>
 <div class="date">February 27, 2013</div>
