--- a/blog_entries/logging-still-sucks.html
+++ b/blog_entries/logging-still-sucks.html
@@ -1,7 +1,7 @@
 Logging Still Sucks
 March 7, 2013
 <p>
-It's 2013, and for some reason logging still a pain in the ass when you use Java (<a href="http://www.slf4j.org">SLF4J</a>) or .NET (<a href="http://logging.apache.org/log4net/">log4net</a>).
+It's 2013, and for some reason logging is still a pain in the ass when you use Java (<a href="http://www.slf4j.org">SLF4J</a>) or .NET (<a href="http://logging.apache.org/log4net/">log4net</a>).
 </p>
 <p>
 SLF4J is indeed a better version of 
