totally forgot about supaplex

--- a/blog_entries/the-games-i-grew-up-with.html
+++ b/blog_entries/the-games-i-grew-up-with.html
@@ -59,6 +59,8 @@ Today I spent some time compiling a list of the games I enjoyed most back then, 
   <dd>Barely ran on our machine. Duke Nukem in 2D!</dd>
   <dt><a href="http://en.wikipedia.org/wiki/Barbarian_(Psygnosis)">Barbarian</a></dt>
   <dd>The character animations were so funny.</dd>
+  <dt><a href="https://en.wikipedia.org/wiki/Supaplex">Supaplex</a></dt>
+  <dd>Puzzle game in which you dig yourself through a digital world and try to not get crushed by falling eggs.</dd>
 </dl>
 
 <p>Notably absent are <a href="http://en.wikipedia.org/wiki/Doom_(video_game)">Doom</a> (required a 386) and <a href="http://en.wikipedia.org/wiki/Quake_(video_game)">Quake</a> (486?) because we basically had the same 286 computer until we made the jump to a Pentium 200 with 64MB or RAM and <a href="http://en.wikipedia.org/wiki/Voodoo2">3Dfx Voodoo 2 video card</a> (running Windows NT). By then I moved on to the original <a href="http://en.wikipedia.org/wiki/Grand_Theft_Auto_(video_game)">GTA</a>, <a href="http://en.wikipedia.org/wiki/Warcraft_2">Warcraft II</a> and <a href="http://en.wikipedia.org/wiki/Diablo_(video_game)">Diablo</a> (though I did play some Quake 1 and 2 on this machine)</p>
