new blog entry: Extremely Functional Java

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
           <a href="">Robbie&#39;s Garbage, Collected.</a>
         </div>
       </div>
-      <div class="home"><h2><a href="2014/01/26/the-games-i-grew-up-with/">The Games I Grew Up With</a></h2>
+      <div class="home"><h2><a href="2014/08/31/extremely-functional-java/">Extremely Functional Java</a></h2>
+<div class="date">August 31, 2014</div>
+<h2><a href="2014/01/26/the-games-i-grew-up-with/">The Games I Grew Up With</a></h2>
 <div class="date">Jan 26, 2014</div>
 <h2><a href="2013/03/15/reverse-strings-like-a-pro/">Reverse Strings Like a Pro</a></h2>
 <div class="date">March 15, 2013</div>
@@ -32,7 +34,7 @@
 <div class="date">March 1, 2013</div>
 <h2><a href="2013/02/27/wordpress-to-github-pages/">Migrating URLs from WordPress to GitHub Pages</a></h2>
 <div class="date">February 27, 2013</div>
-<h2><a href="2010/09/27/save-your-browser-session-from-cmd-q/">Saving Your Browser Session From ⌘Q</a></h2>
+<h2><a href="2010/09/27/save-your-browser-session-from-cmd-q/">Saving Your Browser Session From &#x2318;Q</a></h2>
 <div class="date">September 27, 2010</div>
 <h2><a href="2008/08/23/lazy-loading-for-mere-mortals/">Lazy Loading For Mere Mortals</a></h2>
 <div class="date">August 23, 2008</div>
