Fix rendering of code on mobile and HTML encoding
On Android Chrome the main article font was being "boosted" in size by
Chrome.  However the code samples font was not, making it tiny in
comparison.  These changes take control of the viewport and in addition
switch to using more device independent "%" and "em" units for font
sizing.

Also upgraded all blog generator package dependencies. This fixed some
HTML encoding issues.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Robbie&#39;s Garbage, Collected</title>
+    <title>Robbie&apos;s Garbage, Collected</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -19,7 +20,7 @@
     <div class="body">
       <div class="header">
         <div class="title">
-          <a href="">Robbie&#39;s Garbage, Collected.</a>
+          <a href="">Robbie&apos;s Garbage, Collected.</a>
         </div>
       </div>
       <div class="home"><h2><a href="2014/09/14/how-google-authenticator-works/">How Google Authenticator Works</a></h2>
