new blog entry: I/O With Go: io.Pipe()

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           <a href="">Robbie&apos;s Garbage, Collected.</a>
         </div>
       </div>
-      <div class="home"><h2><a href="2014/09/14/how-google-authenticator-works/">How Google Authenticator Works</a></h2>
+      <div class="home"><h2><a href="2015/05/30/io-with-go-io-pipe/">I/O With Go: io.Pipe()</a></h2>
+<div class="date">May 30, 2015</div>
+<h2><a href="2014/09/14/how-google-authenticator-works/">How Google Authenticator Works</a></h2>
 <div class="date">September 14, 2014</div>
 <h2><a href="2014/08/31/extremely-functional-java/">Extremely Functional Java</a></h2>
 <div class="date">August 31, 2014</div>
