--- a/blog_entries/stay-hungry-stay-foolish.html
+++ b/blog_entries/stay-hungry-stay-foolish.html
@@ -1,3 +1,3 @@
 Stay Hungry, Stay Foolish
 August 26, 2007
-<iframe width="420" height="315" src="http://www.youtube-nocookie.com/embed/UF8uR6Z6KLc" frameborder="0" allowfullscreen></iframe> <br/><br/>This is an awesome speech Steve Jobs gave in 2005 at Stanford University. Truly inspirational stuff.
+<iframe width="420" height="315" src="https://www.youtube-nocookie.com/embed/UF8uR6Z6KLc" frameborder="0" allowfullscreen></iframe> <br/><br/>This is an awesome speech Steve Jobs gave in 2005 at Stanford University. Truly inspirational stuff.
