remove node.js code, regenerate using go generator

--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Robbie&apos;s Garbage, Collected</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+<!DOCTYPE html><html><head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>Robbie&#39;s Garbage, Collected</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-38858050-1']);
@@ -20,10 +18,11 @@
     <div class="body">
       <div class="header">
         <div class="title">
-          <a href="">Robbie&apos;s Garbage, Collected.</a>
+          <a href="">Robbie&#39;s Garbage, Collected.</a>
         </div>
       </div>
-      <div class="home"><h2><a href="2016/05/18/non-functional-software/">Non-functional Software</a></h2>
+      <div class="home">
+      <h2><a href="2016/05/18/non-functional-software/">Non-functional Software</a></h2>
 <div class="date">May 18, 2016</div>
 <h2><a href="2015/05/30/io-with-go-io-pipe/">I/O With Go: io.Pipe()</a></h2>
 <div class="date">May 30, 2015</div>
@@ -32,7 +31,7 @@
 <h2><a href="2014/08/31/extremely-functional-java/">Extremely Functional Java</a></h2>
 <div class="date">August 31, 2014</div>
 <h2><a href="2014/01/26/the-games-i-grew-up-with/">The Games I Grew Up With</a></h2>
-<div class="date">Jan 26, 2014</div>
+<div class="date">January 26, 2014</div>
 <h2><a href="2013/03/15/reverse-strings-like-a-pro/">Reverse Strings Like a Pro</a></h2>
 <div class="date">March 15, 2013</div>
 <h2><a href="2013/03/07/logging-still-sucks/">Logging Still Sucks</a></h2>
@@ -41,11 +40,11 @@
 <div class="date">March 1, 2013</div>
 <h2><a href="2013/02/27/wordpress-to-github-pages/">Migrating URLs from WordPress to GitHub Pages</a></h2>
 <div class="date">February 27, 2013</div>
-<h2><a href="2010/09/27/save-your-browser-session-from-cmd-q/">Saving Your Browser Session From &#x2318;Q</a></h2>
+<h2><a href="2010/09/27/save-your-browser-session-from-cmd-q/">Saving Your Browser Session From ⌘Q</a></h2>
 <div class="date">September 27, 2010</div>
 <h2><a href="2008/08/23/lazy-loading-for-mere-mortals/">Lazy Loading For Mere Mortals</a></h2>
 <div class="date">August 23, 2008</div>
-<h2><a href="2008/07/21/guices-toprovider-sometimes-considered-harmful/">Guice&apos;s toProvider Sometimes Considered Harmful</a></h2>
+<h2><a href="2008/07/21/guices-toprovider-sometimes-considered-harmful/">Guice&#39;s toProvider Sometimes Considered Harmful</a></h2>
 <div class="date">July 21, 2008</div>
 <h2><a href="2008/05/08/guice-productivity/">Guice Productivity</a></h2>
 <div class="date">May 8, 2008</div>
@@ -57,7 +56,7 @@
 <div class="date">March 15, 2008</div>
 <h2><a href="2008/02/05/the-last-lecture/">The Last Lecture</a></h2>
 <div class="date">February 5, 2008</div>
-<h2><a href="2007/12/13/a-goldfishs-memory-of-javapolis-2007/">A Goldfish&apos;s Memory of Javapolis 2007</a></h2>
+<h2><a href="2007/12/13/a-goldfishs-memory-of-javapolis-2007/">A Goldfish&#39;s Memory of Javapolis 2007</a></h2>
 <div class="date">December 13, 2007</div>
 <h2><a href="2007/12/12/guice-book/">Guice Book</a></h2>
 <div class="date">December 12, 2007</div>
@@ -83,9 +82,10 @@
 <div class="date">May 8, 2007</div>
 <h2><a href="2007/05/06/scripting-guice/">Scripting Guice</a></h2>
 <div class="date">May 6, 2007</div>
-<h2><a href="2007/05/04/silverlight-an-offer-you-cant-refuse/">Silverlight: an offer you can&apos;t refuse</a></h2>
+<h2><a href="2007/05/04/silverlight-an-offer-you-cant-refuse/">Silverlight: an offer you can&#39;t refuse</a></h2>
 <div class="date">May 4, 2007</div>
 </div>
     </div>
-  </body>
-</html>
+  
+
+</body></html>
