--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta charset="UTF-8"/>
     <title>Robbie&#39;s Garbage, Collected</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script type="text/javascript">
