--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         </div>
       </div>
       <div class="home">
-      <h2><a href="2017/01/31/four-column-ascii/">Four Column ASCII</a></h2>
+      <h2><a href="2017/02/22/go-range-loop-internals/">Go Range Loop Internals</a></h2>
+<div class="date">February 22, 2017</div>
+<h2><a href="2017/01/31/four-column-ascii/">Four Column ASCII</a></h2>
 <div class="date">January 31, 2017</div>
 <h2><a href="2016/05/18/non-functional-software/">Non-functional Software</a></h2>
 <div class="date">May 18, 2016</div>
