--- a/generator/post-template.html
+++ b/generator/post-template.html
@@ -30,7 +30,7 @@
 
         </div>
         <div class="footer">
-          <em>Liking this? Follow me <a href="https://twitter.com/robbiev">on Twitter</a>.</em>
+          <em>Liking this? Follow me <a href="https://twitter.com/robbiev">on Twitter</a> or <b>get in touch if your company is hiring</b> in London or remote.</em>
         </div>
       </div>
     </div>
