migrate to go modules, fix dead links

--- a/blog_entries/reverse-strings-like-a-pro.html
+++ b/blog_entries/reverse-strings-like-a-pro.html
@@ -78,7 +78,7 @@ would have returned <code>11</code>. But it doesn't; it actually returns
   <li>&#x1D41A; is outside of the BMP, so needs 2 <code>chars</code></li>
 </ul>
 Now you can probably imagine the fun Twitter has <a
-  href="https://dev.twitter.com/docs/counting-characters">enforcing the 140
+  href="https://developer.twitter.com/en/docs/basics/counting-characters">enforcing the 140
   character limit</a>. Anyway, knowing all this, we can do the math for our
 example: <code>2 + 1 + 1 + 1 + 1 + 1 + 2 + 2 + 1 = 12</code>.
 </p>
