end sentence with full stop

--- a/cmd/garbagegen/post-template.html
+++ b/cmd/garbagegen/post-template.html
@@ -20,7 +20,7 @@
 
         </div>
         <div class="footer">
-          <em>Liking this? Follow me <a href="https://mastodon.social/@robbiev">on Mastodon</a></em>
+          <em>Liking this? Follow me <a href="https://mastodon.social/@robbiev">on Mastodon</a>.</em>
         </div>
       </div>
     </div>
