Go HTML Template Autoescaping

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         </div>
       </div>
       <div class="home">
-      <h2><a href="2017/10/24/the-carmack-plan/">The Carmack Plan</a></h2>
+      <h2><a href="2024/07/26/go-html-template-autoescaping/">Go HTML Template Autoescaping</a></h2>
+<div class="date">July 26, 2024</div>
+<h2><a href="2017/10/24/the-carmack-plan/">The Carmack Plan</a></h2>
 <div class="date">October 24, 2017</div>
 <h2><a href="2017/02/22/go-range-loop-internals/">Go Range Loop Internals</a></h2>
 <div class="date">February 22, 2017</div>
