link to rss feed

--- a/cmd/garbagegen/post-template.html
+++ b/cmd/garbagegen/post-template.html
@@ -21,7 +21,7 @@
 
         </div>
         <div class="footer">
-          <em>Liking this? Follow me <a href="https://mastodon.social/@robbiev">on Mastodon</a>.</em>
+          <em>Liking this? Follow me: <a href="/rss.xml">RSS</a>, <a href="https://bsky.app/profile/robbiev.me">Bluesky</a>, <a href="https://mastodon.social/@robbiev">Mastodon</a>.</em>
         </div>
       </div>
     </div>
