--- a/cmd/garbagegen/index-template.html
+++ b/cmd/garbagegen/index-template.html
@@ -13,6 +13,8 @@
         <div class="title">
           <a href="">Robbie&#39;s Garbage, Collected.</a>
         </div>
+        <input type="checkbox" id="theme-toggle" aria-label="Toggle theme">
+        <label for="theme-toggle" class="theme-toggle-label"></label>
       </div>
       <div class="home">
       </div>
