--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <div class="title">
           <a href="">Robbie&#39;s Garbage, Collected.</a>
         </div>
+        <input type="checkbox" id="theme-toggle" aria-label="Toggle theme"/>
+        <label for="theme-toggle" class="theme-toggle-label"></label>
       </div>
       <div class="home">
       <h2><a href="2024/08/01/install-xv6/">How I Set Up Xv6 On macOS</a></h2>
