--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <label for="theme-toggle" class="theme-toggle-label"></label>
       </div>
       <div class="home">
-      <h2><a href="2024/08/01/install-xv6/">How I Set Up Xv6 On macOS</a></h2>
+      <h2><a href="2026/02/19/how-can-i-say-yes/">How Can I Say Yes?</a></h2>
+<div class="date">February 19, 2026</div>
+<h2><a href="2024/08/01/install-xv6/">How I Set Up Xv6 On macOS</a></h2>
 <div class="date">August 1, 2024</div>
 <h2><a href="2024/07/26/go-html-template-autoescaping/">Go HTML Template Autoescaping</a></h2>
 <div class="date">July 26, 2024</div>
